383: correct alignment dropdown with meta-icons

--- a/sass/themes/sr/2018/components/search/_search-block.scss
+++ b/sass/themes/sr/2018/components/search/_search-block.scss
@@ -1,26 +1,42 @@
 .search-block {
-  // offset from navigation
+  // offset top from navigation and give it the same width as the header inner wrapper
   position: fixed;
+  overflow: visible;
   top: calc(#{$sm-nav-height} + 20px);
   right: 0;
-  left: initial;
-  padding: 20px;
+  left: 0;
+  margin: 0 auto;
   width: 100%;
-  background-color: $colour-dark-blue;
+  max-width: 1200px;
+  
   @include breakpoint($screen-md) {
     top: calc(#{$md-nav-height} + 20px);
-    // right: calc(92px + 65px);
-    left: 50%;
-    margin-left: 7px;
-    width: 380px;
   }
   @include breakpoint($desktop-nav-breakpoint) {
     top: calc(#{$lg-nav-height} + 20px); 
-    // margin-left: 123px; 
   }
-  // override base theme's IE fix
+  
   .no-object-fit & {
+    // override base theme's IE fix
     position: fixed;
+  }
+  .search-block__wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 20px;
+    width: 100%;
+    background-color: $colour-dark-blue;
+
+    @include breakpoint($screen-md) {
+      // offset from right width of icon buttons and hamburger button
+      right: calc(92px + 65px);
+      width: 380px;
+    }
+    @include breakpoint($desktop-nav-breakpoint) {
+      // offset from right width of icon buttons and margin meta-icons
+      right: calc(92px + 5px);
+    }
   }
   .search-block__message {
     margin: 0;
